# brcove_package

./: README.md  pyproject.toml  setup.cfg
brcov_ssinha/: atest_file.csv  bcove_cfg_prop.py  bcove_helper.py  bcove_ingest_file.py  data_input.csv  dataconfig.py
brcov_ssinha/bcove_intake/: Untitled.ipynb
brcov_ssinha/tests/: test_bcove_ingest_file.py
